<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    tools:context="com.tapan.IntroApplication.Activity.MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="291dp"
        android:layout_height="299dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="104dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="2pt"
                android:background="#3F51B5"
                android:contentDescription="@string/tic_1"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="2pt"
                android:background="@android:color/background_light"
                android:contentDescription="@string/tic_2"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="2pt"
                android:background="@android:color/background_light"
                android:contentDescription="@string/tic_3"
                android:textSize="36sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="2pt"
                android:background="@android:color/background_light"
                android:contentDescription="@string/tic_4"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="2pt"
                android:background="@android:color/background_light"
                android:contentDescription="@string/tic_5"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn6"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="2pt"
                android:background="@android:color/background_light"
                android:contentDescription="@string/tic_6"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="87dp">

            <Button
                android:id="@+id/btn7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="2pt"
                android:background="@android:color/background_light"
                android:contentDescription="@string/tic_7"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn8"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="2pt"
                android:background="@android:color/background_light"
                android:contentDescription="@string/tic_8"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btn9"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="2pt"
                android:background="@color/purple_700"
                android:contentDescription="@string/tic_9"
                android:textSize="36sp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="298dp"
        android:layout_height="62dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="107dp"
        android:textAlignment="center"
        android:textColor="#F3EBEB"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="37dp"
        android:background="#E30A6F"
        android:text="@string/game_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>